[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://BebasNeue-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 651.298, 669.455 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="Score" type="Label" parent="."]
margin_left = 7.0
margin_right = 67.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="RestartGame" type="Timer" parent="."]
pause_mode = 2
wait_time = 2.0

[node name="GameOver" type="Label" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1
valign = 1
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="RestartGame" to="." method="_on_RestartGame_timeout"]
